# ansible-volumes

./: .ansible-lint  .gitignore  .travis.yml  .yamllint  README.md  ansible.cfg  configure  galaxy.yml  pyproject.toml  requirements-collections.yml  requirements-dev.txt  requirements.txt  requirements.yml  tox.ini
.github/workflows/: molecule.yml
defaults/: main.yml
handlers/: main.yml
meta/: .galaxy_install_info  main.yml
molecule/default/: converge.yml  molecule.yml
molecule/default/tests/: test_default.py
molecule/kvm/: converge.yml  molecule.yml
molecule/kvm/tests/: test_default.py
molecule/nfs/: converge.yml  molecule.yml  prepare.yml
molecule/nfs/tests/: test_consumer.py  test_datastore.py
molecule/nfskvm/: converge.yml  molecule.yml  prepare.yml  tests
molecule/parallels/: converge.yml  molecule.yml
tasks/: autoextends.yml  lv.yml  main.yml  nfs-client-automount-conf.yml  nfs-client-automount-entry.yml  nfs-client-entry.yml  nfs-client-fstab-conf.yml  nfs-client-fstab-entry.yml  nfs-client.yml  nfs-common.yml  nfs-deps.yml  nfs-entry.yml  nfs-host-mountpoint.yml  nfs-requirements.yml  nfs-server.yml  nfs-vgs.yml  pool.yml  prereq.yml  vg.yml  xfs.yml
templates/: thinpool-profile.j2
