[tool.poetry]
name = "tcharl.ansible_volumes"
version = "0.1.0"
description = "Manipulates linux volume groupe"
authors = ["Charlie Mordant <cmordant1@gmail.com>"]
license = "Apache2"
readme = "README.md"
include = ["defaults", "files", "handlers", "meta", "tasks", "templates", "vars"]
packages = [
    {include = "meta/**/*.py"}
]

[tool.poetry.dependencies]
python = ">=3.11"
ansible = "^11.5.0"
jmespath = "^1.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
yamllint = "*"
tox = "*"
pytest-testinfra = "*"
python-vagrant = "*"
molecule = "25.1.0"
molecule-plugins = { version = "*", extras = ["vagrant"] }
ansible-lint = { version = "v25.8.2", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
